import { createHash } from "node:crypto";
import { describe, expect, it } from "vitest";

import { resolveProjectFacts } from "../../../src/application/resolution.js";
import { extractFileFacts } from "../../../src/extraction/index.js";
import type { SourceDocument } from "../../../src/ports/source-catalog.js";

const INDEXED_AT = "2026-09-09T00:00:00.000Z";

type FixtureFiles = Readonly<Record<string, string>>;

const POSITIVE_FILES: FixtureFiles = {
  "api/__init__.py": "",
  "api/routers/__init__.py": [
    "from .catalog import router as public_router",
    "from api.routers.admin import router as absolute_router"
  ].join("\n"),
  "api/routers/catalog.py": [
    "from ninja import Router",
    "router = Router()",
    "",
    "@router.get(\"/health\")",
    "def health(request):",
    "    return {\"ok\": True}",
    "",
    "@router.api_operation([\"POST\", \"PATCH\"], \"/orders\")",
    "def upsert_order(request):",
    "    return {\"ok\": True}"
  ].join("\n"),
  "api/routers/admin.py": [
    "from ninja import Router",
    "router = Router()",
    "",
    "@router.delete(\"/admin\")",
    "def delete_admin(request):",
    "    return {\"ok\": True}"
  ].join("\n"),
  "api/main.py": [
    "from ninja import NinjaAPI",
    "from .routers.catalog import router as direct_router",
    "from .routers import public_router",
    "from api.routers.admin import router as absolute_direct_router",
    "from api.routers import absolute_router",
    "api = NinjaAPI()",
    "api.add_router(\"/direct\", direct_router)",
    "api.add_router(\"/relative-reexport\", public_router)",
    "api.add_router(\"/absolute\", absolute_direct_router)",
    "api.add_router(\"/absolute-reexport\", absolute_router)"
  ].join("\n")
};

const MISSING_OR_UNSUPPORTED_FILES: FixtureFiles = {
  "api/__init__.py": "",
  "api/routers/__init__.py": "from .missing import router as missing_router",
  "api/routers/dynamic.py": [
    "from ninja import Router",
    "prefix = \"/dynamic\"",
    "router = Router()",
    "",
    "@router.get(\"/dynamic\")",
    "def dynamic(request):",
    "    return {\"ok\": True}"
  ].join("\n"),
  "api/main.py": [
    "from ninja import NinjaAPI",
    "from .routers.missing import router as missing_direct",
    "from .routers import missing_router",
    "from .routers.dynamic import router as dynamic_router",
    "prefix = \"/dynamic\"",
    "api = NinjaAPI()",
    "api.add_router(\"/missing-direct\", missing_direct)",
    "api.add_router(\"/missing-reexport\", missing_router)",
    "api.add_router(prefix, dynamic_router)"
  ].join("\n")
};

const MISSING_PACKAGE_BOUNDARY_FILES: FixtureFiles = {
  "api/routers/__init__.py": "",
  "api/routers/catalog.py": [
    "from ninja import Router",
    "router = Router()",
    "",
    "@router.get(\"/health\")",
    "def health(request):",
    "    return {\"ok\": True}"
  ].join("\n"),
  "api/main.py": [
    "from ninja import NinjaAPI",
    "from .routers.catalog import router",
    "api = NinjaAPI()",
    "api.add_router(\"/api\", router)"
  ].join("\n")
};

function resolveFixture(files: FixtureFiles) {
  const sourceDocuments: SourceDocument[] = Object.entries(files).map(([relativePath, sourceText]) => ({
    relativePath,
    absolutePath: `/django-ninja-resolver-parity/${relativePath}`,
    language: "python",
    sourceText,
    contentHash: createHash("sha256").update(sourceText).digest("hex")
  }));
  return resolveProjectFacts({
    sourceDocuments,
    extractedFiles: sourceDocuments.map((document) =>
      extractFileFacts({
        filePath: document.relativePath,
        sourceText: document.sourceText,
        language: document.language
      })
    ),
    indexedAt: INDEXED_AT
  });
}

function importedDjangoNinjaRouteEdges(result: ReturnType<typeof resolveFixture>) {
  return result.edges.filter(
    (edge) =>
      edge.kind === "routes" &&
      edge.evidence?.ruleId.startsWith("framework.django-ninja.") === true &&
      edge.evidence.ruleId.includes(".add-router.")
  );
}

describe("Django Ninja router resolver pre-move parity golden", () => {
  it("preserves relative, absolute, and initializer re-export Router routes", () => {
    const result = resolveFixture(POSITIVE_FILES);
    const edges = importedDjangoNinjaRouteEdges(result);
    const ruleIds = edges.map((edge) => edge.evidence?.ruleId ?? "");

    expect(edges).toHaveLength(8);
    expect(ruleIds.some((ruleId) => ruleId.startsWith("framework.django-ninja.imported-router."))).toBe(true);
    expect(ruleIds.some((ruleId) => ruleId.startsWith("framework.django-ninja.project-absolute-router."))).toBe(true);
    expect(ruleIds.some((ruleId) => ruleId.startsWith("framework.django-ninja.reexported-router."))).toBe(true);
    expect(ruleIds.some((ruleId) => ruleId.startsWith("framework.django-ninja.project-absolute-reexported-router."))).toBe(true);
    expect(ruleIds.some((ruleId) => ruleId.includes(".api-operation.local-function"))).toBe(true);
    expect(edges.every((edge) => edge.resolution === "exact" && edge.targetId !== null && edge.confidence === 1)).toBe(true);
    expect(result).toMatchSnapshot();
  });

  it("keeps missing and dynamic Router targets unresolved", () => {
    const result = resolveFixture(MISSING_OR_UNSUPPORTED_FILES);
    const edges = importedDjangoNinjaRouteEdges(result);

    expect(edges.filter((edge) => edge.resolution === "exact")).toEqual([]);
    expect(edges.filter((edge) => edge.targetId !== null)).toEqual([]);
    expect(result).toMatchSnapshot();
  });

  it("does not cross a missing regular-package boundary", () => {
    const result = resolveFixture(MISSING_PACKAGE_BOUNDARY_FILES);
    const edges = importedDjangoNinjaRouteEdges(result);

    expect(edges.filter((edge) => edge.resolution === "exact")).toEqual([]);
    expect(edges.filter((edge) => edge.targetId !== null)).toEqual([]);
    expect(result).toMatchSnapshot();
  });
});
